# quickjs

./: .gitmodules  CMakeLists.txt  README.md  main.cpp
cxx/: ffi.cpp  ffi.h
